--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     </style>
 </head>
 <body>
-    <iframe src="https://sumatra.mojok.org" frameborder="0"></iframe>
+    <iframe src="https://weekly-light-show.kanacad.org" frameborder="0"></iframe>
 </body>
 </html>
