--- a/index.html
+++ b/index.html
@@ -3,23 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lite</title>
-    <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
-        }
-        iframe {
-            width: 100%;
-            height: 100%;
-            border: none;
-        }
-    </style>
+    <title>Simple Calculator</title>
 </head>
 <body>
-    <iframe src="https://weekly-light-show.kanacad.org" frameborder="0"></iframe>
+    <div class="calculator">
+        <input type="text" id="result" readonly>
+        <table>
+            <tr>
+                <td><button onclick="appendNumber('7')">7</button></td>
+                <td><button onclick="appendNumber('8')">8</button></td>
+                <td><button onclick="appendNumber('9')">9</button></td>
+                <td><button onclick="appendOperation('/')">/</button></td>
+            </tr>
+            <tr>
+                <td><button onclick="appendNumber('4')">4</button></td>
+                <td><button onclick="appendNumber('5')">5</button></td>
+                <td><button onclick="appendNumber('6')">6</button></td>
+                <td><button onclick="appendOperation('*')">*</button></td>
+            </tr>
+            <tr>
+                <td><button onclick="appendNumber('1')">1</button></td>
+                <td><button onclick="appendNumber('2')">2</button></td>
+                <td><button onclick="appendNumber('3')">3</button></td>
+                <td><button onclick="appendOperation('-')">-</button></td>
+            </tr>
+            <tr>
+                <td><button onclick="clearScreen()">C</button></td>
+                <td><button onclick="appendNumber('0')">0</button></td>
+                <td><button onclick="appendOperation('.')">.</button></td>
+                <td><button onclick="calculate()">=</button></td>
+            </tr>
+        </table>
+    </div>
+    <script>
+        // JavaScript functions for buttons will be here
+    </script>
 </body>
 </html>
