--- a/index.html
+++ b/index.html
@@ -42,19 +42,54 @@
         </table>
     </div>
     <script>
+        let currentNumber = "";
+        let previousNumber = "";
+        let operator = "";
+
         function appendNumber(number) {
-            document.getElementById("result").value += number;
+            currentNumber += number;
+            document.getElementById("result").value = currentNumber;
         }
 
-        function appendOperation(operator) {
-            document.getElementById("result").value += operator;
+        function appendOperation(op) {
+            operator = op;
+            previousNumber = currentNumber;
+            currentNumber = "";
         }
 
         function clearScreen() {
+            currentNumber = "";
+            previousNumber = "";
+            operator = "";
             document.getElementById("result").value = "";
         }
 
-        // JavaScript function for calculation will be here
+        function calculate() {
+            let result = 0;
+            switch (operator) {
+                case '+':
+                    result = parseFloat(previousNumber) + parseFloat(currentNumber);
+                    break;
+                case '-':
+                    result = parseFloat(previousNumber) - parseFloat(currentNumber);
+                    break;
+                case '*':
+                    result = parseFloat(previousNumber) * parseFloat(currentNumber);
+                    break;
+                case '/':
+                    if (currentNumber === "0") {
+                        alert("Division by zero error!");
+                        return;
+                    }
+                    result = parseFloat(previousNumber) / parseFloat(currentNumber);
+                    break;
+                case '^':
+                    result = Math.pow(parseFloat(previousNumber), parseFloat(currentNumber));
+                    break;
+            }
+            currentNumber = result.toString();
+            document.getElementById("result").value = currentNumber;
+        }
     </script>
 </body>
 </html>
